update images and analysis

--- a/scrape-nba-salaries-notebook.ipynb
+++ b/scrape-nba-salaries-notebook.ipynb
@@ -20,52 +20,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This will be a tutorial on web scraping using Python’s urllib and regular expression (re) modules. I will be using these tools to write a python script that will “scrape” (obtain) data from the ESPN website and extract any relevant information (salaries, team names, etc.). Web scraping is a useful technique to learn that will allow you to extract data from websites that don’t offer formatted, raw data to the public. You can write scripts to automate the process of obtaining information from these websites, so that you don’t have to spend hours flipping through each page and copy-pasting.\n",
+    "This will be a tutorial on web scraping using Python’s urllib and regular expression modules. I will be using these tools to write a python script that will “scrape” data from the ESPN website and extract player information. Web scraping is a useful technique for extracting data from websites that don’t offer formatted, raw data for download. You can write scripts to automate the process of obtaining information from these websites, so that you don’t have to spend hours flipping through each page and copy-pasting.\n",
     "\n",
-    "I will be collecting two statistics on the salaries of all the players in the NBA (As of currently, March 2020):\n",
+    "As an example, I will be scraping data for the salaries of all the players in the NBA (as of currently, March 2020). We can use the data to compute metrics such as:\n",
+    "\n",
     "1. the average salary paid to each individual team in the NBA.\n",
-    "2.  the highest salary (and corresponding player) on each team in the NBA.\n",
+    "2. the highest salary (and corresponding player) on each team in the NBA.\n",
     "\n",
-    "Let’s first plan out how to do this in the easiest possible way, before diving into the code. The first we should do is take a look at the website to figure out which web pages we will be scraping information from.\n",
+    "Let’s first plan out how to do this in the easiest possible way, before diving into the code. We will first take a look at the website to figure out which web pages we need to scrape information from.\n",
     "\n",
     "The teams page looks like the following:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This looks very promising. All the team names are listed on this page, which means that they can easily be extracted from the page source. A good idea would be to have the python script obtain a list of all the teams from this specific URL, create the URLs for each team (format: http://espn.go.com/nba/team/roster/_/name/ + TEAM NAME) using that list, then systematically loop through all the team URLs and have the python script extract the player salaries from page sources of each of them.\n",
-    "\n",
-    "Let’s take a look at the page source to see if this is feasible:"
+    "![ESPN_teams_webpage.png](images/ESPN_teams_webpage.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This looks very promising. All the team names are listed on this page, which means that they can easily be extracted from the page source. Let’s take a look at the page source to see if the we can find the URLs for each team's roster:"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, webpages that link to other webpages always have their links provided in some sort of pattern (look below the highlighted segment in the page source above). We’re going to take advantage of this.\n",
-    "Let’s take a look at the Roster page within each team’s URL. Below is a screenshot (clickable) of the Boston Celtic’s roster page and page source:"
+    "![ESPN_teams_source.png](images/ESPN_teams_source.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "It looks like URLs for each of the teams rosters are listed in the page source with the following format: http://espn.go.com/nba/team/roster/_/name/team/team-name, as shown in the highlighted portion of the image above. Given that these are all following the same format, we can use regular expressions to pull out a list of all the teams the page source. Then, we can systematically loop through all of the team rosters and use regular expressions again to extract the player salaries from page sources for each roster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s take a look at the Roster page within each team’s URL. Below is a screenshot of the Golden State Warrior’s roster page and page source:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![GSW_roster_webpage.png](images/GSW_roster_webpage.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,13 +85,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![GSW_roster_source.png](images/GSW_roster_source.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "After examining the general structure of the website, we can begin to write the python script.\n",
     "Start by importing the “urllib” and “re” packages:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +240,7 @@
        " 'washington-wizards': 'http://www.espn.com/nba/team/roster/_/name/wsh/washington-wizards'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,14 +259,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://www.espn.com/nba/team/roster/_/name/gs/golden-state-warriors\"\n",
+    "f = urllib.request.urlopen(url)\n",
+    "stats = f.read().decode('utf-8')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\{\"name\"\\\\:\"(\\\\w+\\\\s\\\\w+)\",\"href\"\\\\:\"http\\\\://www\\\\.espn\\\\.com/nba/player/.*?\",(.*?)\\\\}'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "href=\"http://www.espn.com/nba/player/_/id/3975/stephen-curry\">Stephen Curry</a><span class=\"pl2 n10\">30</span></span></td><td class=\"Table__TD\"><span style=\"min-width:40px\" class=\"\">PG</span></td><td class=\"Table__TD\"><span style=\"min-width:40px\" class=\"\">32</span></td><td class=\"Table__TD\"><span style=\"min-width:50px\" class=\"\">6&#x27; 3&quot;</span></td><td class=\"Table__TD\"><span style=\"min-width:70px\" class=\"\">185 lbs</span></td><td class=\"Table__TD\"><span class=\"\">Davidson</span></td><td class=\"Table__TD\"><span class=\"\">$40,231,758</span></td></tr>\n",
+    "\"\"\"\n",
+    "\n",
+    "player_info_regex = ('\\{\\\"name\\\"\\:\\\"(\\w+\\s\\w+)\\\",'\n",
+    "                         '\\\"href\\\"\\:\\\"http\\://www\\.espn\\.com/nba/player/.*?\\\",(.*?)\\}')\n",
+    "player_info_regex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Ky Bowman',\n",
+       "  '\"uid\":\"s:40~l:46~a:4065635\",\"guid\":\"d0ef63e951bb5f842b7357521697dc62\",\"id\":\"4065635\",\"height\":\"6\\' 1\\\\\"\",\"weight\":\"187 lbs\",\"age\":22,\"position\":\"PG\",\"jersey\":\"12\",\"salary\":\"$350,189\",\"birthDate\":\"06/17/97\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/4065635.png\",\"lastName\":\"Ky Bowman\",\"experience\":0,\"college\":\"Boston College\"'),\n",
+       " ('Marquese Chriss',\n",
+       "  '\"uid\":\"s:40~l:46~a:3907487\",\"guid\":\"a320ecf1d6481b7518ddc1dc576c27b4\",\"id\":\"3907487\",\"height\":\"6\\' 9\\\\\"\",\"weight\":\"240 lbs\",\"age\":22,\"position\":\"C\",\"jersey\":\"32\",\"salary\":\"$654,469\",\"birthDate\":\"07/02/97\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3907487.png\",\"lastName\":\"Marquese Chriss\",\"experience\":3,\"college\":\"Washington\",\"birthPlace\":\"Sacramento, CA\"'),\n",
+       " ('Stephen Curry',\n",
+       "  '\"uid\":\"s:40~l:46~a:3975\",\"guid\":\"5dda51f150c966e12026400b73f34fad\",\"id\":\"3975\",\"height\":\"6\\' 3\\\\\"\",\"weight\":\"185 lbs\",\"age\":32,\"position\":\"PG\",\"jersey\":\"30\",\"salary\":\"$40,231,758\",\"birthDate\":\"03/14/88\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3975.png\",\"lastName\":\"Stephen Curry\",\"experience\":10,\"college\":\"Davidson\",\"birthPlace\":\"Akron, OH\"'),\n",
+       " ('Draymond Green',\n",
+       "  '\"uid\":\"s:40~l:46~a:6589\",\"guid\":\"de360720e41625f28a6bb5ff82616cb1\",\"id\":\"6589\",\"height\":\"6\\' 6\\\\\"\",\"weight\":\"230 lbs\",\"age\":30,\"position\":\"PF\",\"jersey\":\"23\",\"salary\":\"$18,539,130\",\"birthDate\":\"03/04/90\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/6589.png\",\"lastName\":\"Draymond Green\",\"experience\":7,\"college\":\"Michigan State\",\"birthPlace\":\"Saginaw, MI\"'),\n",
+       " ('Damion Lee',\n",
+       "  '\"uid\":\"s:40~l:46~a:2595209\",\"guid\":\"41fafb6d47a66d8f79f94161918541a4\",\"id\":\"2595209\",\"height\":\"6\\' 5\\\\\"\",\"weight\":\"210 lbs\",\"age\":27,\"position\":\"SG\",\"hand\":\"L\",\"jersey\":\"1\",\"salary\":\"$842,327\",\"birthDate\":\"10/21/92\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/2595209.png\",\"lastName\":\"Damion Lee\",\"experience\":2,\"college\":\"Louisville\"'),\n",
+       " ('Kevon Looney',\n",
+       "  '\"uid\":\"s:40~l:46~a:3155535\",\"guid\":\"10a8e77b877324c69966f0c4618caad6\",\"id\":\"3155535\",\"height\":\"6\\' 9\\\\\"\",\"weight\":\"222 lbs\",\"age\":24,\"position\":\"PF\",\"jersey\":\"5\",\"salary\":\"$4,464,226\",\"birthDate\":\"02/06/96\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3155535.png\",\"lastName\":\"Kevon Looney\",\"experience\":4,\"college\":\"UCLA\",\"birthPlace\":\"Milwaukee, WI\"'),\n",
+       " ('Mychal Mulder',\n",
+       "  '\"uid\":\"s:40~l:46~a:3936298\",\"guid\":\"f5a46c489e9aee6a1a74f67f9494132f\",\"id\":\"3936298\",\"height\":\"6\\' 4\\\\\"\",\"weight\":\"184 lbs\",\"age\":25,\"position\":\"G\",\"jersey\":\"12\",\"birthDate\":\"06/12/94\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3936298.png\",\"lastName\":\"Mychal Mulder\",\"experience\":0,\"college\":\"Kentucky\",\"birthPlace\":\"Toronto, ON\"'),\n",
+       " ('Eric Paschall',\n",
+       "  '\"uid\":\"s:40~l:46~a:3133817\",\"guid\":\"b67e5e0fa5cb209355845d165a49407e\",\"id\":\"3133817\",\"height\":\"6\\' 6\\\\\"\",\"weight\":\"255 lbs\",\"age\":23,\"position\":\"PF\",\"jersey\":\"7\",\"salary\":\"$898,310\",\"birthDate\":\"11/04/96\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3133817.png\",\"lastName\":\"Eric Paschall\",\"experience\":0,\"college\":\"Villanova\",\"birthPlace\":\"North Tarrytown, NY\"'),\n",
+       " ('Jordan Poole',\n",
+       "  '\"uid\":\"s:40~l:46~a:4277956\",\"guid\":\"4b0492b5a52f267fe84098ef6d2e2bdf\",\"id\":\"4277956\",\"height\":\"6\\' 4\\\\\"\",\"weight\":\"194 lbs\",\"age\":20,\"position\":\"SG\",\"hand\":\"B\",\"jersey\":\"3\",\"salary\":\"$1,964,760\",\"birthDate\":\"06/19/99\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/4277956.png\",\"lastName\":\"Jordan Poole\",\"experience\":0,\"college\":\"Michigan\",\"birthPlace\":\"Milwaukee, WI\"'),\n",
+       " ('Chasson Randle',\n",
+       "  '\"uid\":\"s:40~l:46~a:2580898\",\"guid\":\"71b7154a3d81842448b623ee3e65d586\",\"id\":\"2580898\",\"height\":\"6\\' 2\\\\\"\",\"weight\":\"185 lbs\",\"age\":27,\"position\":\"PG\",\"jersey\":\"25\",\"birthDate\":\"02/05/93\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/2580898.png\",\"lastName\":\"Chasson Randle\",\"experience\":2,\"college\":\"Stanford\",\"birthPlace\":\"Rock Island, IL\"'),\n",
+       " ('Alen Smailagic',\n",
+       "  '\"uid\":\"s:40~l:46~a:4401415\",\"guid\":\"6ed3f8924bfef2e70329ebd6a104ecae\",\"id\":\"4401415\",\"height\":\"6\\' 10\\\\\"\",\"weight\":\"215 lbs\",\"age\":19,\"position\":\"PF\",\"jersey\":\"6\",\"salary\":\"$898,310\",\"birthDate\":\"08/18/00\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/4401415.png\",\"lastName\":\"Alen Smailagic\",\"experience\":0'),\n",
+       " ('Klay Thompson',\n",
+       "  '\"uid\":\"s:40~l:46~a:6475\",\"guid\":\"3411530a7ab7e8dce4f165d59a559520\",\"id\":\"6475\",\"height\":\"6\\' 6\\\\\"\",\"weight\":\"215 lbs\",\"age\":30,\"position\":\"SG\",\"jersey\":\"11\",\"salary\":\"$32,742,000\",\"birthDate\":\"02/08/90\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/6475.png\",\"lastName\":\"Klay Thompson\",\"experience\":8,\"college\":\"Washington State\",\"birthPlace\":\"Los Angeles, CA\"'),\n",
+       " ('Andrew Wiggins',\n",
+       "  '\"uid\":\"s:40~l:46~a:3059319\",\"guid\":\"064c19d065276a21ca99fdfb296fe05d\",\"id\":\"3059319\",\"height\":\"6\\' 7\\\\\"\",\"weight\":\"197 lbs\",\"age\":25,\"position\":\"SF\",\"jersey\":\"22\",\"salary\":\"$27,504,630\",\"birthDate\":\"02/23/95\",\"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3059319.png\",\"lastName\":\"Andrew Wiggins\",\"experience\":5,\"college\":\"Kansas\",\"birthPlace\":\"Thornhill, ON\"')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_info = re.findall(player_info_regex, stats)\n",
+    "player_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$18,539,130\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "teststring = \"{\"+player_info[3][1]+\"}\"\n",
+    "teststring\n",
+    "\n",
+    "draymond = json.loads(teststring)\n",
+    "\n",
+    "type(draymond)\n",
+    "\n",
+    "draymond.keys()\n",
+    "\n",
+    "print(draymond[\"salary\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,12 +386,15 @@
     "        stats = f.read().decode('utf-8')\n",
     "        '''\n",
     "        The salaries were embedded in the source code in this format:\n",
-    "        <a href=\"http://www.espn.com/nba/player/_/id/3975/stephen-curry\">Stephen Curry</a>\n",
-    "        </td><td>PG</td><td >29</td><td >6-3</td><td >190</td><td>Davidson</td><td>$34,382,550</td>\n",
-    "        </tr><tr class=\"evenrow player-46-3202\"><td >35</td><td class=\"sortcell\">\n",
+    "        {\"name\":\"Stephen Curry\",\"href\":\"http://www.espn.com/nba/player/_/id/3975/stephen-curry\",\n",
+    "        \"uid\":\"s:40~l:46~a:3975\",\"guid\":\"5dda51f150c966e12026400b73f34fad\",\"id\":\"3975\",\n",
+    "        \"height\":\"6' 3\\\"\",\"weight\":\"185 lbs\",\"age\":32,\"position\":\"PG\",\"jersey\":\"30\",\n",
+    "        \"salary\":\"$40,231,758\",\"birthDate\":\"03/14/88\",\n",
+    "        \"headshot\":\"https://a.espncdn.com/i/headshots/nba/players/full/3975.png\",\n",
+    "        \"lastName\":\"Stephen Curry\",\"experience\":10,\"college\":\"Davidson\",\"birthPlace\":\"Akron, OH\"}\n",
     "        '''\n",
     "        # This is the regex pattern to return players and their corresponding salary.\n",
-    "        player_salaries = dict(re.findall('http\\://www\\.espn\\.com/nba/player/_/id/\\d*?/.*?\\\">(\\w+\\s\\w+)</a></td><td>\\w*?</td><td >\\d*?</td><td >.*?</td><td >\\d*?</td><td>.*?</td><td>(.*?)</td>', stats))\n",
+    "        player_info = dict(re.findall('', stats))\n",
     "        # in the dictionary, each player corresponds to a salary. change the salaries from strings to integers.\n",
     "        salaries = []\n",
     "        for key in player_salaries.keys():\n",
@@ -343,7 +464,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the data, we can see who is paid the most.\n",
+    "Looking at the data, we can see who is paid the most:\n",
+    "\n",
+    "In general, webpages that link to subpages within the same site construct their links in some sort of standardized pattern. The techniques that I've outlined here should be broadly applicable for other websites. I hope what you've learned from this project will help you out on your own web scraping quests.\n",
     "\n",
     "Thanks for reading! I hope my code helped you understand how to perform basic web scraping using Python."
    ]
