fix typos and publish

--- a/scrape-nba-statistics-notebook.ipynb
+++ b/scrape-nba-statistics-notebook.ipynb
@@ -1132,7 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scrape player stats: career averages"
+    "## Scrape player stats for career averages"
    ]
   },
   {
@@ -3885,7 +3885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, I used Python to scrape ESPN for statistics on all the players in the NBA using the `urllib` and `re` packages. Then, I used `pandas` to organize the data and calculate some summary statistics.\n",
+    "Here, I used Python to scrape ESPN for statistics on all the players in the NBA using the `urllib` and `re` packages. Then, I used `pandas` and `scikit-learn` to organize the data and calculate some summary statistics.\n",
     "\n",
     "I hope what you've learned from this project will help you out on your own web scraping quests. The techniques that I've outlined here should be broadly applicable for other websites. In general, webpages that link to subpages within the same site will construct their links in some sort of standardized pattern. If so, you can construct URLs for the subpages and loop through them as we have done here. Next time you find yourself flipping through a website and copy-pasting, consider trying to automate the process using Python!"
    ]
