fix player_regex to match updated website

--- a/scrape-nba-statistics-notebook.ipynb
+++ b/scrape-nba-statistics-notebook.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ESPN_teams_webpage.png](images/ESPN_teams_webpage.png)"
+    "![ESPN_teams_webpage.png](images/ESPN_teams_webpage.png)<img src=\"attachment:NN.png\" width=\"400\">"
    ]
   },
   {
@@ -110,14 +110,14 @@
     "# This method finds the urls for each of the rosters in the NBA using regexes.\n",
     "def build_team_urls():\n",
     "    # Open the espn teams webpage and extract the names of each roster available.\n",
-    "    f = urllib.request.urlopen('http://www.espn.com/nba/teams')\n",
+    "    f = urllib.request.urlopen('https://www.espn.com/nba/teams')\n",
     "    teams_source = f.read().decode('utf-8')\n",
     "    teams = dict(re.findall(\"www\\.espn\\.com/nba/team/_/name/(\\w+)/(.+?)\\\",\", teams_source))\n",
     "    # Using the names of the rosters, create the urls of each roster\n",
     "    roster_urls = []\n",
     "    for key in teams.keys():\n",
     "        # each roster webpage follows this general pattern.\n",
-    "        roster_urls.append('http://www.espn.com/nba/team/roster/_/name/' + key + '/' + teams[key])\n",
+    "        roster_urls.append('https://www.espn.com/nba/team/roster/_/name/' + key + '/' + teams[key])\n",
     "        teams[key] = str(teams[key])\n",
     "    return dict(zip(teams.values(), roster_urls))"
    ]
@@ -130,36 +130,36 @@
     {
      "data": {
       "text/plain": [
-       "{'atlanta-hawks': 'http://www.espn.com/nba/team/roster/_/name/atl/atlanta-hawks',\n",
-       " 'boston-celtics': 'http://www.espn.com/nba/team/roster/_/name/bos/boston-celtics',\n",
-       " 'brooklyn-nets': 'http://www.espn.com/nba/team/roster/_/name/bkn/brooklyn-nets',\n",
-       " 'charlotte-hornets': 'http://www.espn.com/nba/team/roster/_/name/cha/charlotte-hornets',\n",
-       " 'chicago-bulls': 'http://www.espn.com/nba/team/roster/_/name/chi/chicago-bulls',\n",
-       " 'cleveland-cavaliers': 'http://www.espn.com/nba/team/roster/_/name/cle/cleveland-cavaliers',\n",
-       " 'dallas-mavericks': 'http://www.espn.com/nba/team/roster/_/name/dal/dallas-mavericks',\n",
-       " 'denver-nuggets': 'http://www.espn.com/nba/team/roster/_/name/den/denver-nuggets',\n",
-       " 'detroit-pistons': 'http://www.espn.com/nba/team/roster/_/name/det/detroit-pistons',\n",
-       " 'golden-state-warriors': 'http://www.espn.com/nba/team/roster/_/name/gs/golden-state-warriors',\n",
-       " 'houston-rockets': 'http://www.espn.com/nba/team/roster/_/name/hou/houston-rockets',\n",
-       " 'indiana-pacers': 'http://www.espn.com/nba/team/roster/_/name/ind/indiana-pacers',\n",
-       " 'la-clippers': 'http://www.espn.com/nba/team/roster/_/name/lac/la-clippers',\n",
-       " 'los-angeles-lakers': 'http://www.espn.com/nba/team/roster/_/name/lal/los-angeles-lakers',\n",
-       " 'memphis-grizzlies': 'http://www.espn.com/nba/team/roster/_/name/mem/memphis-grizzlies',\n",
-       " 'miami-heat': 'http://www.espn.com/nba/team/roster/_/name/mia/miami-heat',\n",
-       " 'milwaukee-bucks': 'http://www.espn.com/nba/team/roster/_/name/mil/milwaukee-bucks',\n",
-       " 'minnesota-timberwolves': 'http://www.espn.com/nba/team/roster/_/name/min/minnesota-timberwolves',\n",
-       " 'new-orleans-pelicans': 'http://www.espn.com/nba/team/roster/_/name/no/new-orleans-pelicans',\n",
-       " 'new-york-knicks': 'http://www.espn.com/nba/team/roster/_/name/ny/new-york-knicks',\n",
-       " 'oklahoma-city-thunder': 'http://www.espn.com/nba/team/roster/_/name/okc/oklahoma-city-thunder',\n",
-       " 'orlando-magic': 'http://www.espn.com/nba/team/roster/_/name/orl/orlando-magic',\n",
-       " 'philadelphia-76ers': 'http://www.espn.com/nba/team/roster/_/name/phi/philadelphia-76ers',\n",
-       " 'phoenix-suns': 'http://www.espn.com/nba/team/roster/_/name/phx/phoenix-suns',\n",
-       " 'portland-trail-blazers': 'http://www.espn.com/nba/team/roster/_/name/por/portland-trail-blazers',\n",
-       " 'sacramento-kings': 'http://www.espn.com/nba/team/roster/_/name/sac/sacramento-kings',\n",
-       " 'san-antonio-spurs': 'http://www.espn.com/nba/team/roster/_/name/sa/san-antonio-spurs',\n",
-       " 'toronto-raptors': 'http://www.espn.com/nba/team/roster/_/name/tor/toronto-raptors',\n",
-       " 'utah-jazz': 'http://www.espn.com/nba/team/roster/_/name/utah/utah-jazz',\n",
-       " 'washington-wizards': 'http://www.espn.com/nba/team/roster/_/name/wsh/washington-wizards'}"
+       "{'boston-celtics': 'https://www.espn.com/nba/team/roster/_/name/bos/boston-celtics',\n",
+       " 'brooklyn-nets': 'https://www.espn.com/nba/team/roster/_/name/bkn/brooklyn-nets',\n",
+       " 'new-york-knicks': 'https://www.espn.com/nba/team/roster/_/name/ny/new-york-knicks',\n",
+       " 'philadelphia-76ers': 'https://www.espn.com/nba/team/roster/_/name/phi/philadelphia-76ers',\n",
+       " 'toronto-raptors': 'https://www.espn.com/nba/team/roster/_/name/tor/toronto-raptors',\n",
+       " 'chicago-bulls': 'https://www.espn.com/nba/team/roster/_/name/chi/chicago-bulls',\n",
+       " 'cleveland-cavaliers': 'https://www.espn.com/nba/team/roster/_/name/cle/cleveland-cavaliers',\n",
+       " 'detroit-pistons': 'https://www.espn.com/nba/team/roster/_/name/det/detroit-pistons',\n",
+       " 'indiana-pacers': 'https://www.espn.com/nba/team/roster/_/name/ind/indiana-pacers',\n",
+       " 'milwaukee-bucks': 'https://www.espn.com/nba/team/roster/_/name/mil/milwaukee-bucks',\n",
+       " 'atlanta-hawks': 'https://www.espn.com/nba/team/roster/_/name/atl/atlanta-hawks',\n",
+       " 'charlotte-hornets': 'https://www.espn.com/nba/team/roster/_/name/cha/charlotte-hornets',\n",
+       " 'miami-heat': 'https://www.espn.com/nba/team/roster/_/name/mia/miami-heat',\n",
+       " 'orlando-magic': 'https://www.espn.com/nba/team/roster/_/name/orl/orlando-magic',\n",
+       " 'washington-wizards': 'https://www.espn.com/nba/team/roster/_/name/wsh/washington-wizards',\n",
+       " 'denver-nuggets': 'https://www.espn.com/nba/team/roster/_/name/den/denver-nuggets',\n",
+       " 'minnesota-timberwolves': 'https://www.espn.com/nba/team/roster/_/name/min/minnesota-timberwolves',\n",
+       " 'oklahoma-city-thunder': 'https://www.espn.com/nba/team/roster/_/name/okc/oklahoma-city-thunder',\n",
+       " 'portland-trail-blazers': 'https://www.espn.com/nba/team/roster/_/name/por/portland-trail-blazers',\n",
+       " 'utah-jazz': 'https://www.espn.com/nba/team/roster/_/name/utah/utah-jazz',\n",
+       " 'golden-state-warriors': 'https://www.espn.com/nba/team/roster/_/name/gs/golden-state-warriors',\n",
+       " 'la-clippers': 'https://www.espn.com/nba/team/roster/_/name/lac/la-clippers',\n",
+       " 'los-angeles-lakers': 'https://www.espn.com/nba/team/roster/_/name/lal/los-angeles-lakers',\n",
+       " 'phoenix-suns': 'https://www.espn.com/nba/team/roster/_/name/phx/phoenix-suns',\n",
+       " 'sacramento-kings': 'https://www.espn.com/nba/team/roster/_/name/sac/sacramento-kings',\n",
+       " 'dallas-mavericks': 'https://www.espn.com/nba/team/roster/_/name/dal/dallas-mavericks',\n",
+       " 'houston-rockets': 'https://www.espn.com/nba/team/roster/_/name/hou/houston-rockets',\n",
+       " 'memphis-grizzlies': 'https://www.espn.com/nba/team/roster/_/name/mem/memphis-grizzlies',\n",
+       " 'new-orleans-pelicans': 'https://www.espn.com/nba/team/roster/_/name/no/new-orleans-pelicans',\n",
+       " 'san-antonio-spurs': 'https://www.espn.com/nba/team/roster/_/name/sa/san-antonio-spurs'}"
       ]
      },
      "execution_count": 3,
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "player_regex = ('\\{\\\"name\\\"\\:\\\"(\\w+\\s\\w+)\\\",\\\"href\\\"\\:\\\"http\\://www\\.espn\\.com/nba/player/.*?\\\",(.*?)\\}')\n",
+    "player_regex = ('\\{\\\"name\\\"\\:\\\"(\\w+\\s\\w+)\\\",\\\"href\\\"\\:\\\"https?\\://www\\.espn\\.com/nba/player/.*?\\\",(.*?)\\}')\n",
     "player_regex\n",
     "player_info = re.findall(player_regex, roster_source)\n",
     "player_info[0:4]"
@@ -317,7 +317,7 @@
     "    f = urllib.request.urlopen(roster_url)\n",
     "    roster_source = f.read().decode('utf-8')\n",
     "    sleep(0.5)\n",
-    "    player_regex = ('\\{\\\"name\\\"\\:\\\"(\\w+\\s\\w+)\\\",\\\"href\\\"\\:\\\"http\\://www\\.espn\\.com/nba/player/.*?\\\",(.*?)\\}')\n",
+    "    player_regex = ('\\{\\\"name\\\"\\:\\\"(\\w+\\s\\w+)\\\",\\\"href\\\"\\:\\\"https?\\://www\\.espn\\.com/nba/player/.*?\\\",(.*?)\\}')\n",
     "    player_info = re.findall(player_regex, roster_source)\n",
     "    player_dict = dict()\n",
     "    for player in player_info:\n",
@@ -3893,7 +3893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3907,7 +3907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
